--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "homepage": "https://github.com/blairthemachine/Savvy-portfolio#readme",
   "devDependencies": {
     "eslint": "^4.19.1"
+  },
+  "dependencies": {
+    "lodash": "^4.17.10",
+    "navigo": "^7.1.2"
   }
 }
